@@ -15,7 +15,6 @@ dependencies:
     sdk: flutter
 
   english_words: ^4.0.0
-  provider: ^6.0.0
 
   shared_preferences: ^2.1.0
 
@@ -29,6 +28,11 @@ dependencies:
   logger: ^1.4.0
   sqflite: ^2.0.0+3
   path_provider: ^2.0.9
+
+  path: ^1.8.0
+
+  provider: ^6.0.0
+  sqflite_common_ffi: ^2.3.4+4
 
 dev_dependencies:
   flutter_test:
