@@ -1,6 +1,6 @@
 import 'package:flutter_test/flutter_test.dart';
 import 'package:league_of_logs/src/core/utils/constants.dart';
-import 'package:league_of_logs/src/features/workout_generator/player_stats_DTO.dart';
+import 'package:league_of_logs/src/features/workout_generator/data/player_stats.dart';
 import 'package:league_of_logs/src/features/workout_generator/domain/workout_generator_service.dart';
 
 void main() {
@@ -9,7 +9,8 @@ void main() {
 
     test('generates workout correctly for decent ADC stats on Advanced fitness', () {
       // Arrange
-      final PlayerStatsDTO stats = PlayerStatsDTO(
+      final PlayerStats stats = PlayerStats(
+        id: 0,
         name: 'Demo1Ace',
         role: 'ADC',
         isMVP: true,
@@ -20,6 +21,7 @@ void main() {
         creepScore: 194,
         visionScore: 15,
         gameDuration: 37,
+        submitDate: DateTime.now(),
       );
       final String fitnessLevel = 'Advanced';
 
